modified:   helpers/XmlUtils.java